RESOLVED FIXED134288
Assertion failed: CGPathAddRoundedRect asserts on non-renderable rounded rectangle.
https://bugs.webkit.org/show_bug.cgi?id=134288
Summary Assertion failed: CGPathAddRoundedRect asserts on non-renderable rounded rect...
alan
Reported 2014-06-24 19:57:33 PDT
When the radius width/height sum is bigger than the rectangle width/height.
Attachments
Patch (9.50 KB, patch)
2014-06-24 20:28 PDT, alan
no flags
Archive of layout-test-results from webkit-ews-11 for mac-mountainlion-wk2 (530.47 KB, application/zip)
2014-06-24 22:44 PDT, Build Bot
no flags
Patch (9.64 KB, patch)
2014-06-25 16:12 PDT, alan
no flags
alan
Comment 1 2014-06-24 20:28:59 PDT
alan
Comment 2 2014-06-24 20:29:16 PDT
Comment on attachment 233782 [details] Patch EWS first
Build Bot
Comment 3 2014-06-24 22:44:36 PDT
Comment on attachment 233782 [details] Patch Attachment 233782 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.appspot.com/results/5198997765488640 New failing tests: media/W3C/video/networkState/networkState_during_loadstart.html
Build Bot
Comment 4 2014-06-24 22:44:41 PDT
Created attachment 233788 [details] Archive of layout-test-results from webkit-ews-11 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-11 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
alan
Comment 5 2014-06-25 06:49:30 PDT
Failed cases look unrelated.
alan
Comment 6 2014-06-25 16:12:18 PDT
WebKit Commit Bot
Comment 7 2014-06-25 19:39:35 PDT
Comment on attachment 233846 [details] Patch Clearing flags on attachment: 233846 Committed r170458: <http://trac.webkit.org/changeset/170458>
WebKit Commit Bot
Comment 8 2014-06-25 19:39:40 PDT
All reviewed patches have been landed. Closing bug.
alan
Comment 9 2014-06-25 20:12:44 PDT
Note You need to log in before you can comment on or make changes to this bug.