Source/WebCore/platform/graphics/FloatRoundedRect.h
@@ -69,6 +69,7 @@ public:
         bool isZero() const;
 
         void scale(float factor);
+        void scale(float horizontalFactor, float verticalFactor);
         void expand(float topWidth, float bottomWidth, float leftWidth, float rightWidth);
         void expand(float size) { expand(size, size, size, size); }
         void shrink(float topWidth, float bottomWidth, float leftWidth, float rightWidth) { expand(-topWidth, -bottomWidth, -leftWidth, -rightWidth); }
